--- a/test_functions.ipynb
+++ b/test_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from plotnine import *\n",
     "import gzip\n",
     "import csv\n",
-    "import os"
+    "import os\n",
+    "from joblib import Parallel, delayed"
    ]
   },
   {
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,12 +514,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__ == \"__main__\":\n",
+    "# if __name__ == \"__main__\":\n",
     "    \n",
+    "#     # get sequences and labels\n",
+    "#     seqs   = gen_data_dict('data/signals.gz')\n",
+    "#     labels = gen_data_dict('data/labels.gz')\n",
+    "\n",
+    "#     # lambda candidates\n",
+    "#     ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
+    "\n",
+    "#     for i in range(85, len(seqs)):\n",
+    "#         for fold in [1,2]:\n",
+    "#             # generate data\n",
+    "#             sequence, neg_start, neg_end, pos_start, pos_end = get_data(i, fold=fold, seqs=seqs, labels=labels)\n",
+    "#             sequence_length = len(sequence)-1\n",
+    "\n",
+    "#             # vectors of cumulative sums\n",
+    "#             y, z = get_cumsum(sequence)\n",
+    "\n",
+    "#             # get T\n",
+    "#             T = get_T(sequence_length, [], [], [], [])\n",
+    "\n",
+    "#             # run each lambda and record it into csv file\n",
+    "#             row  = [i, fold]\n",
+    "#             errs = []\n",
+    "#             for lda in ldas:\n",
+    "#                 # print testing\n",
+    "#                 print(lda)\n",
+    "\n",
+    "#                 chpnt = lopart(lda, T, sequence, y, z)\n",
+    "#                 err = error_count(chpnt, neg_start, neg_end, pos_start, pos_end)\n",
+    "#                 errs.append(err)\n",
+    "#             row += errs\n",
+    "#             write_to_csv('record/error.csv', row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85 is not executed\n",
+      "85 is not executed\n"
+     ]
+    }
+   ],
+   "source": [
+    "def try_lambda(i):\n",
+    "    lda = ldas[i]\n",
+    "    chpnt = lopart(lda, T, sequence, y, z)\n",
+    "    err = error_count(chpnt, neg_start, neg_end, pos_start, pos_end)\n",
+    "    return err\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
     "    # get sequences and labels\n",
     "    seqs   = gen_data_dict('data/signals.gz')\n",
     "    labels = gen_data_dict('data/labels.gz')\n",
@@ -526,8 +582,8 @@
     "    # lambda candidates\n",
     "    ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
     "\n",
-    "    for i in range(len(seqs)):\n",
-    "        for fold in [1,2]:\n",
+    "    for i in range(85, 87):\n",
+    "        for fold in [1, 2]:\n",
     "            # generate data\n",
     "            sequence, neg_start, neg_end, pos_start, pos_end = get_data(i, fold=fold, seqs=seqs, labels=labels)\n",
     "            sequence_length = len(sequence)-1\n",
@@ -540,13 +596,14 @@
     "\n",
     "            # run each lambda and record it into csv file\n",
     "            row  = [i, fold]\n",
-    "            errs = []\n",
-    "            for lda in ldas:\n",
-    "                chpnt = lopart(lda, T, sequence, y, z)\n",
-    "                err = error_count(chpnt, neg_start, neg_end, pos_start, pos_end)\n",
-    "                errs.append(err)\n",
+    "\n",
+    "            try:\n",
+    "                errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "            except Exception as e:\n",
+    "                errs = Parallel(n_jobs=1)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "\n",
     "            row += errs\n",
-    "            write_to_csv('record/error.csv', row)"
+    "            write_to_csv('record/errors.csv', row)"
    ]
   }
  ],
