--- a/test_functions.ipynb
+++ b/test_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,27 +73,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(i, fold, seqs, labels):\n",
+    "def get_data(i, seqs, labels):\n",
     "    # sequence\n",
     "    seq_df = seqs[i][1]\n",
     "    sequence = seq_df['logratio'].to_numpy()\n",
     "\n",
     "    # labels\n",
     "    lab_df = labels[i][1]\n",
-    "    lab_df = lab_df[lab_df['fold'] == fold]\n",
     "\n",
-    "    pos_lab_df = lab_df[lab_df['changes'] == 1]\n",
-    "    neg_lab_df = lab_df[lab_df['changes'] == 0]\n",
+    "    # fold 1\n",
+    "    lab_df_1 = lab_df[lab_df['fold'] == 1]\n",
+    "    pos_lab_df = lab_df_1[lab_df_1['changes'] == 1]\n",
+    "    neg_lab_df = lab_df_1[lab_df_1['changes'] == 0]\n",
     "\n",
-    "    neg_start = neg_lab_df['start'].to_numpy()\n",
-    "    neg_end   = neg_lab_df['end'].to_numpy()\n",
-    "    pos_start = pos_lab_df['start'].to_numpy()\n",
-    "    pos_end   = pos_lab_df['end'].to_numpy()\n",
-    "    return sequence, neg_start, neg_end, pos_start, pos_end\n",
+    "    neg_start_1 = neg_lab_df['start'].to_numpy()\n",
+    "    neg_end_1   = neg_lab_df['end'].to_numpy()\n",
+    "    pos_start_1 = pos_lab_df['start'].to_numpy()\n",
+    "    pos_end_1   = pos_lab_df['end'].to_numpy()\n",
+    "\n",
+    "    # fold 2\n",
+    "    lab_df_2 = lab_df[lab_df['fold'] == 2]\n",
+    "    pos_lab_df = lab_df_2[lab_df_2['changes'] == 1]\n",
+    "    neg_lab_df = lab_df_2[lab_df_2['changes'] == 0]\n",
+    "\n",
+    "    neg_start_2 = neg_lab_df['start'].to_numpy()\n",
+    "    neg_end_2   = neg_lab_df['end'].to_numpy()\n",
+    "    pos_start_2 = pos_lab_df['start'].to_numpy()\n",
+    "    pos_end_2   = pos_lab_df['end'].to_numpy()\n",
+    "\n",
+    "    return sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2\n",
     "\n",
     "# # test\n",
     "# sequence, neg_start, neg_end, pos_start, pos_end = get_data(0, seqs, labels)\n",
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +517,7 @@
     "\n",
     "        # If the file is newly created, write the header row\n",
     "        if not file_exists:\n",
-    "            header = ['sequenceID','fold','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
+    "            header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
     "            csv_writer.writerow(header)\n",
     "\n",
     "        # Write the new row\n",
@@ -514,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,15 +567,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85 is not executed\n",
-      "85 is not executed\n"
+      "Can't run parallel with sequence 85\n",
+      "Can't run parallel with sequence 86\n",
+      "Can't run parallel with sequence 87\n",
+      "Can't run parallel with sequence 88\n",
+      "Can't run parallel with sequence 89\n",
+      "Can't run parallel with sequence 90\n"
      ]
     }
    ],
@@ -571,8 +587,9 @@
     "def try_lambda(i):\n",
     "    lda = ldas[i]\n",
     "    chpnt = lopart(lda, T, sequence, y, z)\n",
-    "    err = error_count(chpnt, neg_start, neg_end, pos_start, pos_end)\n",
-    "    return err\n",
+    "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
+    "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
+    "    return err_1, err_2\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
     "    # get sequences and labels\n",
@@ -582,28 +599,28 @@
     "    # lambda candidates\n",
     "    ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
     "\n",
-    "    for i in range(85, 87):\n",
-    "        for fold in [1, 2]:\n",
-    "            # generate data\n",
-    "            sequence, neg_start, neg_end, pos_start, pos_end = get_data(i, fold=fold, seqs=seqs, labels=labels)\n",
-    "            sequence_length = len(sequence)-1\n",
+    "    for i in range(0, len(seqs)):\n",
+    "        # generate data\n",
+    "        sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
+    "        sequence_length = len(sequence)-1\n",
     "\n",
-    "            # vectors of cumulative sums\n",
-    "            y, z = get_cumsum(sequence)\n",
+    "        # vectors of cumulative sums\n",
+    "        y, z = get_cumsum(sequence)\n",
     "\n",
-    "            # get T\n",
-    "            T = get_T(sequence_length, [], [], [], [])\n",
+    "        # get T\n",
+    "        T = get_T(sequence_length, [], [], [], [])\n",
     "\n",
-    "            # run each lambda and record it into csv file\n",
-    "            row  = [i, fold]\n",
+    "        # run each lambda and record it into csv file\n",
+    "        row  = [i]\n",
     "\n",
-    "            try:\n",
-    "                errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
-    "            except Exception as e:\n",
-    "                errs = Parallel(n_jobs=1)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "        try:\n",
+    "            errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Can't run parallel with sequence {i}\")\n",
+    "            errs = Parallel(n_jobs=1)(delayed(try_lambda)(i) for i in range(0, 21))\n",
     "\n",
-    "            row += errs\n",
-    "            write_to_csv('record/errors.csv', row)"
+    "        row += errs\n",
+    "        write_to_csv('record/errors.csv', row)"
    ]
   }
  ],
