--- a/play_with_data.ipynb
+++ b/play_with_data.ipynb
@@ -52,7 +52,7 @@
     "    # Count and unique values\n",
     "    count = sequence['logratio'].count()\n",
     "\n",
-    "    return np.array([mean_value, median_value, std_deviation, percentile_25, percentile_75, range_value, skewness, kurtosis, count])\n"
+    "    return np.array([mean_value, median_value, std_deviation, percentile_25, percentile_75, range_value, skewness, kurtosis, count/1000])\n"
    ]
   },
   {
@@ -68,232 +68,6 @@
     "\n",
     "column_names = [\"seqID\", \"mean_value\", \"median_value\", \"std_deviation\", \"percentile_25\", \"percentile_75\", \"range_value\", \"skewness\", \"kurtosis\", \"count\"]\n",
     "df = pd.DataFrame(array_rows, columns=column_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>seqID</th>\n",
-       "      <th>mean_value</th>\n",
-       "      <th>median_value</th>\n",
-       "      <th>std_deviation</th>\n",
-       "      <th>percentile_25</th>\n",
-       "      <th>percentile_75</th>\n",
-       "      <th>range_value</th>\n",
-       "      <th>skewness</th>\n",
-       "      <th>kurtosis</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.313451</td>\n",
-       "      <td>0.336855</td>\n",
-       "      <td>0.183431</td>\n",
-       "      <td>0.259423</td>\n",
-       "      <td>0.412239</td>\n",
-       "      <td>1.354229</td>\n",
-       "      <td>-2.207026</td>\n",
-       "      <td>7.508871</td>\n",
-       "      <td>474.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.092563</td>\n",
-       "      <td>0.162210</td>\n",
-       "      <td>0.263228</td>\n",
-       "      <td>-0.174622</td>\n",
-       "      <td>0.319617</td>\n",
-       "      <td>0.931739</td>\n",
-       "      <td>-0.148131</td>\n",
-       "      <td>-1.487185</td>\n",
-       "      <td>155.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-0.119023</td>\n",
-       "      <td>-0.139236</td>\n",
-       "      <td>0.186725</td>\n",
-       "      <td>-0.254118</td>\n",
-       "      <td>-0.039489</td>\n",
-       "      <td>1.178472</td>\n",
-       "      <td>1.731410</td>\n",
-       "      <td>5.540867</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-0.080282</td>\n",
-       "      <td>-0.106249</td>\n",
-       "      <td>0.212940</td>\n",
-       "      <td>-0.259291</td>\n",
-       "      <td>0.094906</td>\n",
-       "      <td>0.966269</td>\n",
-       "      <td>0.287526</td>\n",
-       "      <td>-0.943570</td>\n",
-       "      <td>163.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-0.120553</td>\n",
-       "      <td>-0.053645</td>\n",
-       "      <td>0.229760</td>\n",
-       "      <td>-0.213007</td>\n",
-       "      <td>0.018278</td>\n",
-       "      <td>1.163706</td>\n",
-       "      <td>-0.607609</td>\n",
-       "      <td>-0.106406</td>\n",
-       "      <td>118.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>408</th>\n",
-       "      <td>408.0</td>\n",
-       "      <td>0.181327</td>\n",
-       "      <td>0.016000</td>\n",
-       "      <td>0.304551</td>\n",
-       "      <td>-0.025000</td>\n",
-       "      <td>0.354250</td>\n",
-       "      <td>1.455000</td>\n",
-       "      <td>1.217585</td>\n",
-       "      <td>0.330306</td>\n",
-       "      <td>188.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>409</th>\n",
-       "      <td>409.0</td>\n",
-       "      <td>-0.116354</td>\n",
-       "      <td>-0.012000</td>\n",
-       "      <td>0.206474</td>\n",
-       "      <td>-0.284000</td>\n",
-       "      <td>0.032000</td>\n",
-       "      <td>0.885000</td>\n",
-       "      <td>-0.926986</td>\n",
-       "      <td>-0.499512</td>\n",
-       "      <td>257.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>410</th>\n",
-       "      <td>410.0</td>\n",
-       "      <td>-0.111544</td>\n",
-       "      <td>-0.032000</td>\n",
-       "      <td>0.172608</td>\n",
-       "      <td>-0.214125</td>\n",
-       "      <td>0.008000</td>\n",
-       "      <td>0.781000</td>\n",
-       "      <td>-1.210235</td>\n",
-       "      <td>0.406716</td>\n",
-       "      <td>238.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>411</th>\n",
-       "      <td>411.0</td>\n",
-       "      <td>-0.075912</td>\n",
-       "      <td>-0.074760</td>\n",
-       "      <td>0.064818</td>\n",
-       "      <td>-0.115597</td>\n",
-       "      <td>-0.032463</td>\n",
-       "      <td>0.434886</td>\n",
-       "      <td>-0.456224</td>\n",
-       "      <td>0.915028</td>\n",
-       "      <td>234.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>412</th>\n",
-       "      <td>412.0</td>\n",
-       "      <td>-0.189580</td>\n",
-       "      <td>-0.185245</td>\n",
-       "      <td>0.094477</td>\n",
-       "      <td>-0.256700</td>\n",
-       "      <td>-0.129734</td>\n",
-       "      <td>0.482393</td>\n",
-       "      <td>0.073153</td>\n",
-       "      <td>0.020734</td>\n",
-       "      <td>154.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>413 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     seqID  mean_value  median_value  std_deviation  percentile_25  \\\n",
-       "0      0.0    0.313451      0.336855       0.183431       0.259423   \n",
-       "1      1.0    0.092563      0.162210       0.263228      -0.174622   \n",
-       "2      2.0   -0.119023     -0.139236       0.186725      -0.254118   \n",
-       "3      3.0   -0.080282     -0.106249       0.212940      -0.259291   \n",
-       "4      4.0   -0.120553     -0.053645       0.229760      -0.213007   \n",
-       "..     ...         ...           ...            ...            ...   \n",
-       "408  408.0    0.181327      0.016000       0.304551      -0.025000   \n",
-       "409  409.0   -0.116354     -0.012000       0.206474      -0.284000   \n",
-       "410  410.0   -0.111544     -0.032000       0.172608      -0.214125   \n",
-       "411  411.0   -0.075912     -0.074760       0.064818      -0.115597   \n",
-       "412  412.0   -0.189580     -0.185245       0.094477      -0.256700   \n",
-       "\n",
-       "     percentile_75  range_value  skewness  kurtosis  count  \n",
-       "0         0.412239     1.354229 -2.207026  7.508871  474.0  \n",
-       "1         0.319617     0.931739 -0.148131 -1.487185  155.0  \n",
-       "2        -0.039489     1.178472  1.731410  5.540867   79.0  \n",
-       "3         0.094906     0.966269  0.287526 -0.943570  163.0  \n",
-       "4         0.018278     1.163706 -0.607609 -0.106406  118.0  \n",
-       "..             ...          ...       ...       ...    ...  \n",
-       "408       0.354250     1.455000  1.217585  0.330306  188.0  \n",
-       "409       0.032000     0.885000 -0.926986 -0.499512  257.0  \n",
-       "410       0.008000     0.781000 -1.210235  0.406716  238.0  \n",
-       "411      -0.032463     0.434886 -0.456224  0.915028  234.0  \n",
-       "412      -0.129734     0.482393  0.073153  0.020734  154.0  \n",
-       "\n",
-       "[413 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
