--- a/record/process_errors.ipynb
+++ b/record/process_errors.ipynb
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1.to_csv('errors_1.csv')\n",
-    "df_2.to_csv('errors_2.csv')"
+    "df_1.to_csv('errors_1.csv', index=False)\n",
+    "df_2.to_csv('errors_2.csv', index=False)"
    ]
   }
  ],
