--- a/record/generate_training_data.ipynb
+++ b/record/generate_training_data.ipynb
@@ -18,7 +18,8 @@
    "source": [
     "# Read the CSV file into a DataFrame\n",
     "df_1 = pd.read_csv('errors_1.csv')\n",
-    "df_2 = pd.read_csv('errors_2.csv')"
+    "df_2 = pd.read_csv('errors_2.csv')\n",
+    "df_3 = pd.read_csv('errors_total.csv')"
    ]
   },
   {
@@ -41,13 +42,16 @@
    "source": [
     "rows_1 = []\n",
     "rows_2 = []\n",
+    "rows_3 = []\n",
     "for i in range(len(df_1)):\n",
     "    rows_1.append([i, ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
     "    rows_2.append([i, ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
+    "    rows_3.append([i, ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
     "\n",
     "column_names = [\"seqID\", \"small_end\", \"big_end\"]\n",
     "pd.DataFrame(rows_1, columns=column_names).to_csv(\"data_fold1.csv\", index=False)\n",
-    "pd.DataFrame(rows_2, columns=column_names).to_csv(\"data_fold2.csv\", index=False)"
+    "pd.DataFrame(rows_2, columns=column_names).to_csv(\"data_fold2.csv\", index=False)\n",
+    "pd.DataFrame(rows_3, columns=column_names).to_csv(\"data_fold1_2.csv\", index=False)"
    ]
   }
  ],
