--- a/record/process_errors.ipynb
+++ b/record/process_errors.ipynb
@@ -48,24 +48,28 @@
     "# get df for each fold\n",
     "df_1 = df.copy()\n",
     "df_2 = df.copy()\n",
+    "df_3 = df.copy()\n",
     "for i in range(len(df)):\n",
     "    for j in range(-10, 11):\n",
     "        if(j%2==0):\n",
     "            df_1.at[i, str(int(0.5*j))] = sum(df_1.iloc[i][str(int(0.5*j))][0])\n",
     "            df_2.at[i, str(int(0.5*j))] = sum(df_2.iloc[i][str(int(0.5*j))][1])\n",
+    "            df_3.at[i, str(int(0.5*j))] = sum(df_3.iloc[i][str(int(0.5*j))][0]) + sum(df_3.iloc[i][str(int(0.5*j))][1])\n",
     "        else:\n",
     "            df_1.at[i, str(0.5*j)] = sum(df_1.iloc[i][str(0.5*j)][0])\n",
-    "            df_2.at[i, str(0.5*j)] = sum(df_2.iloc[i][str(0.5*j)][1])"
+    "            df_2.at[i, str(0.5*j)] = sum(df_2.iloc[i][str(0.5*j)][1])\n",
+    "            df_3.at[i, str(0.5*j)] = sum(df_3.iloc[i][str(0.5*j)][0]) + sum(df_3.iloc[i][str(0.5*j)][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_1.to_csv('errors_1.csv', index=False)\n",
-    "df_2.to_csv('errors_2.csv', index=False)"
+    "df_2.to_csv('errors_2.csv', index=False)\n",
+    "df_3.to_csv('errors_total.csv', index=False)\n"
    ]
   }
  ],
