update sequence features

--- a/DeepLearning_Learn_Lambda.ipynb
+++ b/DeepLearning_Learn_Lambda.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2b9a8bb72d0>"
+       "<torch._C.Generator at 0x1c2faeb72f0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,20 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Custom loss function\n",
+    "margin = 1\n",
     "class SquaredHingeLoss(nn.Module):\n",
-    "    def forward(self, predicted, a, b):\n",
-    "        loss = torch.relu(predicted - b) + torch.relu(a - predicted)\n",
+    "    def forward(self, predicted, low, high):\n",
+    "        low  = low + margin\n",
+    "        high = high - margin\n",
+    "        loss = torch.relu(low - predicted) + torch.relu(predicted - high)\n",
     "        return torch.sum(loss**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,116 +72,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train data\n",
-    "data_df   = pd.read_csv('data/seq_stat.csv')\n",
-    "target_df = pd.read_csv('record/data_fold1_2.csv')\n",
-    "\n",
-    "n_train = 300\n",
-    "\n",
-    "data      = data_df.iloc[:n_train, 1:].to_numpy()\n",
-    "targets_1 = target_df.iloc[:n_train, 1:2].to_numpy()\n",
-    "targets_2 = target_df.iloc[:n_train, 2:3].to_numpy()\n",
-    "\n",
-    "data      = torch.FloatTensor(data)\n",
-    "targets_1 = torch.FloatTensor(targets_1)\n",
-    "targets_2 = torch.FloatTensor(targets_2)\n",
-    "\n",
-    "# test_data\n",
-    "data_test = data_df.iloc[n_train:, 1:].to_numpy()\n",
-    "targets_test_1 = target_df.iloc[n_train:, 1:2].to_numpy()\n",
-    "targets_test_2 = target_df.iloc[n_train:, 2:3].to_numpy()\n",
-    "\n",
-    "data_test      = torch.FloatTensor(data_test)\n",
-    "targets_test_1 = torch.FloatTensor(targets_test_1)\n",
-    "targets_test_2 = torch.FloatTensor(targets_test_2)"
+    "def normalize_data(data):\n",
+    "    mean = data.mean(dim=0)\n",
+    "    std  = data.std(dim=0)\n",
+    "    norm_data = (data - mean) / std\n",
+    "    return norm_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_df   = pd.read_csv('learning_data/seq_features.csv')\n",
+    "target_df = pd.read_csv('learning_data/target_lambda_bothfold.csv')\n",
+    "\n",
+    "n_train = 300\n",
+    "\n",
+    "# train data\n",
+    "data = torch.FloatTensor(data_df.iloc[:n_train, 1:].to_numpy())\n",
+    "data = normalize_data(data)\n",
+    "targets_1 = torch.FloatTensor(target_df.iloc[:n_train, 1:2].to_numpy())\n",
+    "targets_2 = torch.FloatTensor(target_df.iloc[:n_train, 2:3].to_numpy())\n",
+    "\n",
+    "# test_data\n",
+    "data_test = torch.FloatTensor(data_df.iloc[n_train:, 1:].to_numpy())\n",
+    "data_test = normalize_data(data_test)\n",
+    "targets_test_1 = torch.FloatTensor(target_df.iloc[n_train:, 1:2].to_numpy())\n",
+    "targets_test_2 = torch.FloatTensor(target_df.iloc[n_train:, 2:3].to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the deep learning model\n",
     "class MyModel(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, input_size):\n",
     "        super(MyModel, self).__init__()\n",
-    "        self.fc1 = nn.Linear(9, 12)\n",
-    "        self.fc2 = nn.Linear(12, 12)\n",
-    "        self.fc3 = nn.Linear(12, 1)\n",
+    "        self.fc1 = nn.Linear(input_size, 8)\n",
+    "        self.fc2 = nn.Linear(8, 4)\n",
+    "        self.fc3 = nn.Linear(4, 2)\n",
+    "        self.fc4 = nn.Linear(2, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
     "        x = torch.relu(self.fc2(x))\n",
-    "        x = self.fc3(x)\n",
+    "        x = torch.relu(self.fc3(x))\n",
+    "        x = self.fc4(x)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [    0/20000], Loss_train: 413.0152, Loss_test:  52.3353\n",
-      "Epoch [  500/20000], Loss_train:  47.9651, Loss_test:   9.1525\n",
-      "Epoch [ 1000/20000], Loss_train:  39.8293, Loss_test:   8.3247\n",
-      "Epoch [ 1500/20000], Loss_train:  38.3029, Loss_test:   8.1623\n",
-      "Epoch [ 2000/20000], Loss_train:  36.9659, Loss_test:   7.9017\n",
-      "Epoch [ 2500/20000], Loss_train:  35.8430, Loss_test:   7.7170\n",
-      "Epoch [ 3000/20000], Loss_train:  34.8684, Loss_test:   7.5649\n",
-      "Epoch [ 3500/20000], Loss_train:  34.0415, Loss_test:   7.4298\n",
-      "Epoch [ 4000/20000], Loss_train:  33.2219, Loss_test:   7.2784\n",
-      "Epoch [ 4500/20000], Loss_train:  32.3824, Loss_test:   7.1575\n",
-      "Epoch [ 5000/20000], Loss_train:  31.3349, Loss_test:   7.0414\n",
-      "Epoch [ 5500/20000], Loss_train:  30.1132, Loss_test:   7.0327\n",
-      "Epoch [ 6000/20000], Loss_train:  28.2842, Loss_test:   7.0119\n",
-      "Epoch [ 6500/20000], Loss_train:  26.4086, Loss_test:   6.9629\n",
-      "Epoch [ 7000/20000], Loss_train:  24.4704, Loss_test:   7.0246\n",
-      "Epoch [ 7500/20000], Loss_train:  22.6135, Loss_test:   7.1772\n",
-      "Epoch [ 8000/20000], Loss_train:  20.8069, Loss_test:   7.2465\n",
-      "Epoch [ 8500/20000], Loss_train:  19.1911, Loss_test:   7.3873\n",
-      "Epoch [ 9000/20000], Loss_train:  17.5843, Loss_test:   7.4137\n",
-      "Epoch [ 9500/20000], Loss_train:  15.9533, Loss_test:   7.4156\n",
-      "Epoch [10000/20000], Loss_train:  14.4185, Loss_test:   7.3959\n",
-      "Epoch [10500/20000], Loss_train:  13.1218, Loss_test:   7.4146\n",
-      "Epoch [11000/20000], Loss_train:  12.0351, Loss_test:   7.4044\n",
-      "Epoch [11500/20000], Loss_train:  11.2689, Loss_test:   7.4747\n",
-      "Epoch [12000/20000], Loss_train:  10.5190, Loss_test:   7.7418\n",
-      "Epoch [12500/20000], Loss_train:   9.7176, Loss_test:   8.7494\n",
-      "Epoch [13000/20000], Loss_train:   9.1918, Loss_test:   9.3202\n",
-      "Epoch [13500/20000], Loss_train:   8.8084, Loss_test:   9.5631\n",
-      "Epoch [14000/20000], Loss_train:   8.4075, Loss_test:   9.7912\n",
-      "Epoch [14500/20000], Loss_train:   8.0127, Loss_test:  10.0912\n",
-      "Epoch [15000/20000], Loss_train:   7.6514, Loss_test:  10.2514\n",
-      "Epoch [15500/20000], Loss_train:   7.3414, Loss_test:  10.4640\n",
-      "Epoch [16000/20000], Loss_train:   7.0908, Loss_test:  10.6878\n",
-      "Epoch [16500/20000], Loss_train:   6.8673, Loss_test:  10.9037\n",
-      "Epoch [17000/20000], Loss_train:   6.6333, Loss_test:  11.1399\n",
-      "Epoch [17500/20000], Loss_train:   6.4016, Loss_test:  11.4410\n",
-      "Epoch [18000/20000], Loss_train:   6.1986, Loss_test:  11.6827\n",
-      "Epoch [18500/20000], Loss_train:   6.0160, Loss_test:  11.8385\n",
-      "Epoch [19000/20000], Loss_train:   5.7872, Loss_test:  12.0445\n",
-      "Epoch [19500/20000], Loss_train:   5.6025, Loss_test:  12.2701\n",
-      "Epoch [20000/20000], Loss_train:   5.4242, Loss_test:  12.3477\n"
+      "Epoch [    0/10000], Loss_train: 686.7583, Loss_test: 249.6145\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [  500/10000], Loss_train: 537.1819, Loss_test: 170.8680\n",
+      "Epoch [ 1000/10000], Loss_train: 531.4022, Loss_test: 173.6916\n",
+      "Epoch [ 1500/10000], Loss_train: 526.9100, Loss_test: 174.2226\n",
+      "Epoch [ 2000/10000], Loss_train: 522.7416, Loss_test: 177.2994\n",
+      "Epoch [ 2500/10000], Loss_train: 518.2928, Loss_test: 181.1276\n",
+      "Epoch [ 3000/10000], Loss_train: 514.1561, Loss_test: 186.8445\n",
+      "Epoch [ 3500/10000], Loss_train: 511.5004, Loss_test: 192.3344\n",
+      "Epoch [ 4000/10000], Loss_train: 508.8043, Loss_test: 199.8932\n",
+      "Epoch [ 4500/10000], Loss_train: 506.6811, Loss_test: 210.6202\n",
+      "Epoch [ 5000/10000], Loss_train: 503.7804, Loss_test: 236.4378\n",
+      "Epoch [ 5500/10000], Loss_train: 502.3000, Loss_test: 245.6436\n",
+      "Epoch [ 6000/10000], Loss_train: 501.4751, Loss_test: 251.4688\n",
+      "Epoch [ 6500/10000], Loss_train: 500.8625, Loss_test: 256.1204\n",
+      "Epoch [ 7000/10000], Loss_train: 500.4200, Loss_test: 258.6102\n",
+      "Epoch [ 7500/10000], Loss_train: 500.0414, Loss_test: 262.3310\n",
+      "Epoch [ 8000/10000], Loss_train: 499.7447, Loss_test: 267.0522\n",
+      "Epoch [ 8500/10000], Loss_train: 499.5324, Loss_test: 267.9500\n",
+      "Epoch [ 9000/10000], Loss_train: 499.3640, Loss_test: 267.2747\n",
+      "Epoch [ 9500/10000], Loss_train: 499.2379, Loss_test: 267.5090\n",
+      "Epoch [10000/10000], Loss_train: 499.2007, Loss_test: 268.7454\n"
      ]
     }
    ],
    "source": [
     "# Instantiate the model, define custom loss function, and optimizer\n",
-    "model = MyModel()\n",
+    "model = MyModel(input_size = data_df.shape[1] - 1)\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Training loop\n",
-    "epochs = 20000\n",
+    "epochs = 10000\n",
     "for epoch in range(epochs+1):\n",
     "    # Forward pass\n",
     "    outputs_train = model(data)\n",
