--- a/separate_errors_each_fold.ipynb
+++ b/separate_errors_each_fold.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "df_1.to_csv('errors_1.csv', index=False)\n",
     "df_2.to_csv('errors_2.csv', index=False)\n",
-    "df_3.to_csv('errors_total.csv', index=False)\n"
+    "df_3.to_csv('errors_total.csv', index=False)"
    ]
   }
  ],
