--- a/OPART.ipynb
+++ b/OPART.ipynb
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_to_csv(filename, row):\n",
+    "def write_to_csv(filename, header, row):\n",
     "    # Check if the file exists\n",
     "    file_exists = os.path.isfile(filename)\n",
     "\n",
@@ -258,7 +258,7 @@
     "\n",
     "        # If the file is newly created, write the header row\n",
     "        if not file_exists:\n",
-    "            header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
+    "            # header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
     "            csv_writer.writerow(header)\n",
     "\n",
     "        # Write the new row\n",
@@ -271,35 +271,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def try_lambda(i):\n",
-    "    lda = ldas[i]\n",
-    "    chpnt = opart(lda, sequence, y, z)\n",
-    "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
-    "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
-    "    return err_1, err_2\n",
+    "# def try_lambda(i):\n",
+    "#     lda = ldas[i]\n",
+    "#     chpnt = opart(lda, sequence, y, z)\n",
+    "#     err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
+    "#     err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
+    "#     return err_1, err_2\n",
     "    \n",
-    "if __name__ == \"__main__\":\n",
-    "    # get sequences and labels\n",
-    "    seqs   = gen_data_dict('data/signals.gz')\n",
-    "    labels = gen_data_dict('data/labels.gz')\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     # get sequences and labels\n",
+    "#     seqs   = gen_data_dict('data/signals.gz')\n",
+    "#     labels = gen_data_dict('data/labels.gz')\n",
     "\n",
-    "    # lambda candidates\n",
-    "    ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
+    "#     # lambda candidates\n",
+    "#     ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
     "\n",
-    "    for i in range(94, 95):\n",
-    "        # generate data\n",
-    "        sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
-    "        sequence_length = len(sequence)-1\n",
+    "#     for i in range(94, 95):\n",
+    "#         # generate data\n",
+    "#         sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
+    "#         sequence_length = len(sequence)-1\n",
     "\n",
-    "        # vectors of cumulative sums\n",
-    "        y, z = get_cumsum(sequence)\n",
+    "#         # vectors of cumulative sums\n",
+    "#         y, z = get_cumsum(sequence)\n",
     "\n",
-    "        # run each lambda and record it into csv file\n",
-    "        row  = [i]\n",
-    "        errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
-    "        row += errs\n",
+    "#         # run each lambda and record it into csv file\n",
+    "#         row  = [i]\n",
+    "#         errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "#         row += errs\n",
     "\n",
-    "        write_to_csv('record/errors_opart.csv', row)"
+    "#         header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
+    "#         write_to_csv('record/errors_opart.csv', header, row)"
    ]
   }
  ],
