--- a/LOPART.ipynb
+++ b/LOPART.ipynb
@@ -81,6 +81,7 @@
     "    # sequence\n",
     "    seq_df = seqs[i][1]\n",
     "    sequence = seq_df['logratio'].to_numpy()\n",
+    "    sequence = np.append([0], sequence)\n",
     "\n",
     "    # labels\n",
     "    lab_df = labels[i][1]\n",
