--- a/lambda_learning_BIC.ipynb
+++ b/lambda_learning_BIC.ipynb
@@ -37,7 +37,7 @@
     "seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
     "labels = gen_data_dict('sequence_label_data/labels.gz')\n",
     "\n",
-    "header = ['sequenceID', 'total_labels', 'fold_1_errs', 'fold_2_errs']\n",
+    "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
     "\n",
     "for i in range(len(seqs)):\n",
     "    # generate data\n",
@@ -51,10 +51,11 @@
     "    lda = np.log(len(sequence))\n",
     "\n",
     "    # get total labels\n",
-    "    total_labels = len(neg_start_1) + len(neg_start_2) + len(pos_start_1) + len(pos_start_2)\n",
+    "    fold1_total_labels = len(neg_start_1) + len(pos_start_1)\n",
+    "    fold2_total_labels = len(neg_start_2) + len(pos_start_2)\n",
     "\n",
     "    # run each lambda and record it into csv file\n",
-    "    row  = [i, total_labels]\n",
+    "    row  = [i, fold1_total_labels, fold2_total_labels]\n",
     "\n",
     "    chpnt = opart(lda, sequence, y, z)\n",
     "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
@@ -62,7 +63,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/BIC.csv', header, row)"
+    "    write_to_csv('learning_output/BIC_log_e.csv', header, row)"
    ]
   }
  ],
