--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -904,7 +904,7 @@
    ],
    "source": [
     "n = 15\n",
-    "feature_diff = np.ndarray(shape=(n, 413))\n",
+    "feature_diff = np.ndarray(shape=(n, len(seqs)))\n",
     "for i in range(len(seqs)):\n",
     "    for j in range(n):\n",
     "        diff = np.abs(seqs[i][1]['logratio'].to_numpy()[1:] - seqs[i][1]['logratio'].to_numpy()[:-1])\n",
