--- a/OPART.ipynb
+++ b/OPART.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,7 @@
     "    # sequence\n",
     "    seq_df = seqs[i][1]\n",
     "    sequence = seq_df['logratio'].to_numpy()\n",
+    "    sequence = np.append([0], sequence)\n",
     "\n",
     "    # labels\n",
     "    lab_df = labels[i][1]\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +259,6 @@
     "\n",
     "        # If the file is newly created, write the header row\n",
     "        if not file_exists:\n",
-    "            # header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
     "            csv_writer.writerow(header)\n",
     "\n",
     "        # Write the new row\n",
@@ -267,40 +267,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def try_lambda(i):\n",
-    "#     lda = ldas[i]\n",
-    "#     chpnt = opart(lda, sequence, y, z)\n",
-    "#     err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
-    "#     err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
-    "#     return err_1, err_2\n",
+    "def try_lambda(i):\n",
+    "    lda = ldas[i]\n",
+    "    chpnt = opart(lda, sequence, y, z)\n",
+    "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
+    "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
+    "    return err_1, err_2\n",
     "    \n",
-    "# if __name__ == \"__main__\":\n",
-    "#     # get sequences and labels\n",
-    "#     seqs   = gen_data_dict('data/signals.gz')\n",
-    "#     labels = gen_data_dict('data/labels.gz')\n",
+    "if __name__ == \"__main__\":\n",
+    "    # get sequences and labels\n",
+    "    seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
+    "    labels = gen_data_dict('sequence_label_data/labels.gz')\n",
     "\n",
-    "#     # lambda candidates\n",
-    "#     ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
+    "    # lambda candidates\n",
+    "    ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
     "\n",
-    "#     for i in range(94, 95):\n",
-    "#         # generate data\n",
-    "#         sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
-    "#         sequence_length = len(sequence)-1\n",
+    "    for i in range(len(seqs)):\n",
+    "        # generate data\n",
+    "        sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
     "\n",
-    "#         # vectors of cumulative sums\n",
-    "#         y, z = get_cumsum(sequence)\n",
+    "        # vectors of cumulative sums\n",
+    "        y, z = get_cumsum(sequence)\n",
     "\n",
-    "#         # run each lambda and record it into csv file\n",
-    "#         row  = [i]\n",
-    "#         errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
-    "#         row += errs\n",
+    "        # run each lambda and record it into csv file\n",
+    "        row  = [i]\n",
+    "        errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "        row += errs\n",
     "\n",
-    "#         header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
-    "#         write_to_csv('record/errors_opart.csv', header, row)"
+    "        header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
+    "        write_to_csv('learning_data/errors.csv', header, row)"
    ]
   }
  ],
