--- a/lambda_learning_BIC.ipynb
+++ b/lambda_learning_BIC.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "# # get functions from OPART.ipynb\n",
+    "# %run OPART.ipynb"
    ]
   },
   {
@@ -15,22 +16,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # get functions from OPART.ipynb\n",
-    "# %run OPART.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "from ipynb.fs.full.OPART import gen_data_dict, get_data, get_cumsum, L, trace_back, error_count, write_to_csv, opart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +40,7 @@
     "    y, z = get_cumsum(sequence)\n",
     "\n",
     "    # calculate lambda\n",
-    "    lda = np.log(len(sequence))\n",
+    "    lda = np.log10(sequence_length)\n",
     "\n",
     "    # get total labels\n",
     "    fold1_total_labels = len(neg_start_1) + len(pos_start_1)\n",
@@ -63,7 +55,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/BIC_log_e.csv', header, row)"
+    "    write_to_csv('learning_output/BIC.csv', header, row)"
    ]
   }
  ],
