update linear gd

--- a/lambda_learning_linear_SVM.ipynb
+++ b/lambda_learning_linear_SVM.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import svm, datasets\n",
+    "from sklearn import svm\n",
     "import matplotlib.pyplot as plt\n",
     "from ipynb.fs.full.OPART import gen_data_dict, get_data, get_cumsum, L, trace_back, error_count, write_to_csv, opart"
    ]
@@ -226,7 +226,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/linear.csv', header, row)"
+    "    write_to_csv('learning_output/linear_SVM.csv', header, row)"
    ]
   }
  ],
