update deep learning

--- a/error_rate.ipynb
+++ b/error_rate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "BIC_df        = pd.read_csv('learning_output/BIC.csv')\n",
     "linear_svm_df = pd.read_csv('learning_output/linear_SVM.csv')\n",
-    "linear_gd_df  = pd.read_csv('learning_output/linear_GD.csv')"
+    "linear_gd_df  = pd.read_csv('learning_output/linear_GD.csv')\n",
+    "deep_df       = pd.read_csv('learning_output/deep.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -31,18 +32,21 @@
      "text": [
       "method:        BIC \t fold1.test: 72.74 \t fold2.test: 60.58\n",
       "method: linear-svm \t fold1.test: 76.46 \t fold2.test: 65.96\n",
-      "method:  linear-gd \t fold1.test: 76.60 \t fold2.test: 66.15\n"
+      "method:  linear-gd \t fold1.test: 76.60 \t fold2.test: 66.15\n",
+      "method:       deep \t fold1.test: 81.65 \t fold2.test: 73.46\n"
      ]
     }
    ],
    "source": [
-    "for df in [BIC_df, linear_svm_df, linear_gd_df]:\n",
+    "for df in [BIC_df, linear_svm_df, linear_gd_df, deep_df]:\n",
     "    if(df is BIC_df):\n",
     "        method = \"BIC\"\n",
     "    elif(df is linear_svm_df):\n",
     "        method = \"linear-svm\"\n",
     "    elif(df is linear_gd_df):\n",
     "        method = \"linear-gd\"\n",
+    "    elif(df is deep_df):\n",
+    "        method = \"deep\"\n",
     "\n",
     "    fold1_total_errs = df['fold_2_errs'].sum()\n",
     "    fold2_total_errs = df['fold_2_errs'].sum()\n",
