--- a/lambda_learning_linear_GD.ipynb
+++ b/lambda_learning_linear_GD.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x24d781bb2f0>"
+       "<torch._C.Generator at 0x1b3ccbbb230>"
       ]
      },
      "execution_count": 1,
@@ -94,17 +94,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [    0/5000], Loss_1: 622.5753, Loss_2: 650.6815\n",
-      "Epoch [  500/5000], Loss_1: 462.6325, Loss_2: 552.7117\n",
-      "Epoch [ 1000/5000], Loss_1: 443.0288, Loss_2: 550.0253\n",
-      "Epoch [ 1500/5000], Loss_1: 440.2346, Loss_2: 550.0333\n",
-      "Epoch [ 2000/5000], Loss_1: 439.9647, Loss_2: 550.0263\n",
-      "Epoch [ 2500/5000], Loss_1: 439.9647, Loss_2: 550.0080\n",
-      "Epoch [ 3000/5000], Loss_1: 439.9647, Loss_2: 550.0074\n",
-      "Epoch [ 3500/5000], Loss_1: 439.9647, Loss_2: 550.0189\n",
-      "Epoch [ 4000/5000], Loss_1: 439.9647, Loss_2: 550.0118\n",
-      "Epoch [ 4500/5000], Loss_1: 439.9647, Loss_2: 550.0013\n",
-      "Epoch [ 5000/5000], Loss_1: 439.9647, Loss_2: 550.0230\n"
+      "Epoch [    0/5000], Loss_1: 622.5753, Loss_1_test: 660.8674, Loss_2: 650.6815, Loss_2_test: 536.5028\n",
+      "Epoch [  500/5000], Loss_1: 462.6325, Loss_1_test: 627.6062, Loss_2: 552.7117, Loss_2_test: 469.7195\n",
+      "Epoch [ 1000/5000], Loss_1: 443.0288, Loss_1_test: 611.2742, Loss_2: 550.0253, Loss_2_test: 478.2300\n",
+      "Epoch [ 1500/5000], Loss_1: 440.2346, Loss_1_test: 612.4555, Loss_2: 550.0333, Loss_2_test: 479.8304\n",
+      "Epoch [ 2000/5000], Loss_1: 439.9647, Loss_1_test: 612.0368, Loss_2: 550.0263, Loss_2_test: 478.5681\n",
+      "Epoch [ 2500/5000], Loss_1: 439.9647, Loss_1_test: 612.0660, Loss_2: 550.0080, Loss_2_test: 479.1656\n",
+      "Epoch [ 3000/5000], Loss_1: 439.9647, Loss_1_test: 612.0739, Loss_2: 550.0074, Loss_2_test: 479.1956\n",
+      "Epoch [ 3500/5000], Loss_1: 439.9647, Loss_1_test: 612.0749, Loss_2: 550.0189, Loss_2_test: 479.6470\n",
+      "Epoch [ 4000/5000], Loss_1: 439.9647, Loss_1_test: 612.0750, Loss_2: 550.0118, Loss_2_test: 479.0440\n",
+      "Epoch [ 4500/5000], Loss_1: 439.9647, Loss_1_test: 612.0750, Loss_2: 550.0013, Loss_2_test: 479.4181\n",
+      "Epoch [ 5000/5000], Loss_1: 439.9647, Loss_1_test: 612.0750, Loss_2: 550.0230, Loss_2_test: 478.6756\n"
      ]
     }
    ],
@@ -127,6 +127,8 @@
     "    # Compute the custom loss\n",
     "    loss_1 = squared_hinge_loss(outputs1, targets_low_1, targets_high_1)\n",
     "    loss_2 = squared_hinge_loss(outputs2, targets_low_2, targets_high_2)\n",
+    "    loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
+    "    loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
     "    \n",
     "    # Backward pass and optimization\n",
     "    optimizer1.zero_grad()\n",
@@ -139,7 +141,7 @@
     "    \n",
     "    # Print the loss every 100 epochs\n",
     "    if (epoch) % 500 == 0:\n",
-    "        print(f'Epoch [{epoch:5d}/{epochs}], Loss_1: {loss_1.item():8.4f}, Loss_2: {loss_2.item():8.4f}')"
+    "        print(f'Epoch [{epoch:5d}/{epochs}], Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
    ]
   },
   {
