--- a/OPART.ipynb
+++ b/OPART.ipynb
@@ -2,272 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# IMPORT\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import gzip\n",
-    "import csv\n",
-    "import os\n",
-    "from joblib import Parallel, delayed"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### DATA"
+    "from joblib import Parallel, delayed\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gen_data_dict(file_path):\n",
-    "    with gzip.open(file_path, 'rt') as file:\n",
-    "        df = pd.read_csv(file)\n",
-    "\n",
-    "    _dict = tuple(df.groupby('sequenceID'))\n",
-    "    return _dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data(i, seqs, labels):\n",
-    "    # sequence\n",
-    "    seq_df = seqs[i][1]\n",
-    "    sequence = seq_df['logratio'].to_numpy()\n",
-    "    sequence = np.append([0], sequence)\n",
-    "\n",
-    "    # labels\n",
-    "    lab_df = labels[i][1]\n",
-    "\n",
-    "    # fold 1\n",
-    "    lab_df_1 = lab_df[lab_df['fold'] == 1]\n",
-    "    pos_lab_df = lab_df_1[lab_df_1['changes'] == 1]\n",
-    "    neg_lab_df = lab_df_1[lab_df_1['changes'] == 0]\n",
-    "\n",
-    "    neg_start_1 = neg_lab_df['start'].to_numpy()\n",
-    "    neg_end_1   = neg_lab_df['end'].to_numpy()\n",
-    "    pos_start_1 = pos_lab_df['start'].to_numpy()\n",
-    "    pos_end_1   = pos_lab_df['end'].to_numpy()\n",
-    "\n",
-    "    # fold 2\n",
-    "    lab_df_2 = lab_df[lab_df['fold'] == 2]\n",
-    "    pos_lab_df = lab_df_2[lab_df_2['changes'] == 1]\n",
-    "    neg_lab_df = lab_df_2[lab_df_2['changes'] == 0]\n",
-    "\n",
-    "    neg_start_2 = neg_lab_df['start'].to_numpy()\n",
-    "    neg_end_2   = neg_lab_df['end'].to_numpy()\n",
-    "    pos_start_2 = pos_lab_df['start'].to_numpy()\n",
-    "    pos_end_2   = pos_lab_df['end'].to_numpy()\n",
-    "\n",
-    "    return sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2\n",
-    "\n",
-    "# # test\n",
-    "# seqs   = gen_data_dict('data/signals.gz')\n",
-    "# labels = gen_data_dict('data/labels.gz')\n",
-    "# get_data(95, seqs, labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### OPART"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get cumulative sum vectors\n",
-    "def get_cumsum(sequence):\n",
-    "    y = np.cumsum(sequence)\n",
-    "    z = np.cumsum(np.square(sequence))\n",
-    "\n",
-    "    y = np.append([0], y)\n",
-    "    z = np.append([0], z)\n",
-    "\n",
-    "    return y, z\n",
-    "\n",
-    "# # test\n",
-    "# seqs   = gen_data_dict('data/signals.gz')\n",
-    "# labels = gen_data_dict('data/labels.gz')\n",
-    "# sequence, _, _, _, _, _, _, _, _ = get_data(0, seqs=seqs, labels=labels)\n",
-    "# y, z = get_cumsum(sequence)\n",
-    "# print(y)\n",
-    "# print(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function to create loss value from 'start' to 'end' given cumulative sum vector y (data) and z (square)\n",
-    "def L(start, end, y, z):\n",
-    "    _y = y[end+1] - y[start]\n",
-    "    _z = z[end+1] - z[start]\n",
-    "    return _z - np.square(_y)/(end-start+1)\n",
-    "\n",
-    "# # test\n",
-    "# seqs   = gen_data_dict('data/signals.gz')\n",
-    "# labels = gen_data_dict('data/labels.gz')\n",
-    "# sequence, _, _, _, _, _, _, _, _ = get_data(0, seqs=seqs, labels=labels)\n",
-    "# y, z = get_cumsum(sequence)\n",
-    "# print(L(1, 2, y, z))\n",
-    "# print(L(2, 2, y, z))\n",
-    "\n",
-    "# print(L(np.array([1,2]), 2, y, z))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function to get the list of changepoint from vector tau_star\n",
-    "def trace_back(tau_star):\n",
-    "    tau = tau_star[-1]\n",
-    "    chpnt = np.array([len(tau_star)], dtype=int)\n",
-    "    while tau > 0:\n",
-    "        chpnt = np.append(tau, chpnt)\n",
-    "        tau = tau_star[tau-1]\n",
-    "    return np.append(0, chpnt)\n",
-    "\n",
-    "# # test\n",
-    "# print(trace_back(np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])))\n",
-    "# print(trace_back(np.array([0, 0, 0, 0, 0, 5, 5, 5, 5, 5])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# opart dynamic algorithm return set of changepoints given lambda, sequence, and cumsum vectors\n",
-    "def opart(lda, sequence, y, z):\n",
-    "    sequence_length = len(sequence)-1\n",
-    "\n",
-    "    # Set up\n",
-    "    C = np.zeros(sequence_length + 1)\n",
-    "    C[0] = -lda\n",
-    "\n",
-    "    # Get tau_star\n",
-    "    tau_star = np.zeros(sequence_length+1, dtype=int)\n",
-    "    for t in range(1, sequence_length+1):\n",
-    "\n",
-    "        # get set of possible value\n",
-    "        V = C[:t] + lda + L(1 + np.arange(t), t, y, z)\n",
-    "\n",
-    "        # get optimal tau from set V\n",
-    "        last_chpnt = np.argmin(V)\n",
-    "\n",
-    "        # update C_i\n",
-    "        C[t] = V[last_chpnt]\n",
-    "\n",
-    "        # update tau_star\n",
-    "        tau_star[t] = last_chpnt\n",
-    "\n",
-    "    # get set of changepoints\n",
-    "    set_of_chpnt = trace_back(tau_star[1:])\n",
-    "\n",
-    "    return set_of_chpnt\n",
-    "\n",
-    "# # test\n",
-    "# sequence, neg_start, neg_end, pos_start, pos_end = gen_data()\n",
-    "# sequence_length = len(sequence) - 1\n",
-    "# T = get_T(sequence_length, neg_start, neg_end, pos_start, pos_end)\n",
-    "# y, z = get_cumsum(sequence)\n",
-    "\n",
-    "# lda = 0\n",
-    "# print(lopart(lda, T, sequence, y, z))\n",
-    "\n",
-    "# lda = 1000\n",
-    "# print(lopart(lda, T, sequence, y, z))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# counting errors\n",
-    "def count_items_between(lst, a, b):\n",
-    "    count = sum(1 for item in lst if a <= item < b)\n",
-    "    return count\n",
-    "\n",
-    "def error_count(chpnt, neg_start, neg_end, pos_start, pos_end):\n",
-    "    fp_count, fn_count = 0, 0                           # initizlize false positive and false negative\n",
-    "\n",
-    "    for s, e in zip(neg_start, neg_end):\n",
-    "        if(count_items_between(chpnt, s, e) > 0):       # number of change is not 0 in negative labels\n",
-    "            fp_count += 1\n",
-    "\n",
-    "    for s, e in zip(pos_start, pos_end):\n",
-    "        if(count_items_between(chpnt, s, e) > 1):       # number of change is greater than 1 in positive labels\n",
-    "            fp_count += 1\n",
-    "        elif(count_items_between(chpnt, s, e) == 0):    # number of change is 0 in positive labels\n",
-    "            fn_count += 1\n",
-    "\n",
-    "    return fp_count, fn_count\n",
-    "\n",
-    "\n",
-    "# # test\n",
-    "# neg_start = [2, 7]      # there is no changepoint at point 2, 7, and 8\n",
-    "# neg_end   = [3, 9]      #\n",
-    "# pos_start = [4]         # there can be exactly one changepoint at 4 or 5\n",
-    "# pos_end   = [6]         #\n",
-    "\n",
-    "# chpnt = [0, 3, 5, 6, 9, 10]\n",
-    "# print(error_count(chpnt, neg_start, neg_end, pos_start, pos_end))\n",
-    "\n",
-    "# chpnt = [0, 1, 2, 6, 8, 9, 10]\n",
-    "# print(error_count(chpnt, neg_start, neg_end, pos_start, pos_end))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def write_to_csv(filename, header, row):\n",
-    "    # Check if the file exists\n",
-    "    file_exists = os.path.isfile(filename)\n",
-    "\n",
-    "    # Open the CSV file in write mode\n",
-    "    with open(filename, 'a', newline='') as csvfile:\n",
-    "        # Create a CSV writer object\n",
-    "        csv_writer = csv.writer(csvfile)\n",
-    "\n",
-    "        # If the file is newly created, write the header row\n",
-    "        if not file_exists:\n",
-    "            csv_writer.writerow(header)\n",
-    "\n",
-    "        # Write the new row\n",
-    "        csv_writer.writerow(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +45,7 @@
     "        row += errs\n",
     "\n",
     "        header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
-    "        write_to_csv('learning_data/errors.csv', header, row)"
+    "        write_to_csv('learning_data/errors_test.csv', header, row)"
    ]
   }
  ],
